--- a/TriangularLake/app/src/main/res/values/strings.xml
+++ b/TriangularLake/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="area">Area</string>
     <string name="sectors">sectors</string>
     <string name="sector">sector</string>
+    <string name="sector_upper">SECTOR</string>
+    <string name="on_categories">on categories</string>
 </resources>
