--- a/TriangularLake/app/src/main/res/values/strings.xml
+++ b/TriangularLake/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="description_upper">DESCRIPTION</string>
     <string name="stones_upper">STONES</string>
     <string name="look_on_map_upper">LOOK ON A MAP</string>
+    <string name="lietlahti">Lietlahti</string>
+    <string name="triangular_lake">Triangular lake</string>
 </resources>
