Added menu, buttons menu and map, menu and filters activities and fragments. Fix bugs.

--- a/TriangularLake/app/src/main/res/values-en/strings.xml
+++ b/TriangularLake/app/src/main/res/values-en/strings.xml
@@ -3,4 +3,5 @@
     <string name="lietlahti">Lietlahti</string>
     <string name="triangular_lake">Triangular lake</string>
     <string name="app_name">Triangular lake</string>
+    <string name="error">Error</string>
 </resources>
