--- a/TriangularLake/app/src/main/res/values-ru/strings.xml
+++ b/TriangularLake/app/src/main/res/values-ru/strings.xml
@@ -3,5 +3,6 @@
     <string name="lietlahti">Лиетлахти</string>
     <string name="triangular_lake">Озеро Треугольное</string>
     <string name="app_name">Озеро Треугольное</string>
+    <string name="error">Ошибка</string>
 
 </resources>
