--- a/TriangularLake/app/src/main/res/values/strings.xml
+++ b/TriangularLake/app/src/main/res/values/strings.xml
@@ -10,4 +10,18 @@
     <string name="look_on_map_upper">LOOK ON A MAP</string>
     <string name="lietlahti">Lietlahti</string>
     <string name="triangular_lake">Triangular lake</string>
+    <string name="error">Error</string>
+    <string name="map_upper">MAP</string>
+    <string name="detailed">Detailed</string>
+    <string name="danger">Danger</string>
+    <string name="insurance">Insurance</string>
+    <string name="addition">Addition</string>
+
+    <!--боковое меню-->
+    <string name="favorites_upper">FAVORITES</string>
+    <string name="filter_routes_upper">FILTER OF ROUTES</string>
+    <string name="search_upper">SEARCH</string>
+    <string name="information">Information</string>
+    <string name="guidebook_lower">guidebook</string>
+
 </resources>
